Update threat meter with dynamic hazard generation, add index.html redirect, fix back links

--- a/EmergencyTips.html
+++ b/EmergencyTips.html
@@ -65,7 +65,7 @@
       <div class="tip-item">🔥 For fire, stop, drop, and roll if clothes are on fire.</div>
       <div class="tip-item">🚑 Know basic first aid and CPR.</div>
     </div>
-    <a href="maindashboard.html" class="back-btn">⬅ Back</a>
+    <a href="index.html" class="back-btn">⬅ Back</a>
   </div>
 </body>
 </html>
