--- a/Meter.html
+++ b/Meter.html
@@ -77,7 +77,7 @@
     <p id="message">Please allow location access to see the threat meter. <button id="allowBtn">Allow Location</button></p>
     <div class="meter-view" id="meterView"></div>
     <div class="hazard-list" id="hazardList"></div>
-    <a href="maindashboard.html" class="back-btn">⬅ Back</a>
+    <a href="index.html" class="back-btn">⬅ Back</a>
   </div>
   <script>
     const maxBars = 8;
